Added new files for running the jar