@@ -26,5 +26,41 @@ if [ ! -z $BUCKETS ] ; then
    done
 fi
 
-export JAR_FILE=`find $HOME -name "*.jar"`
-java -server -Xms256m -Xmx1024m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -Djava.security.egd=file:/dev/./urandom -jar $JAR_FILE
+if [ "${JAVA_ARGS}" == "" ] ; then
+   export JAVA_ARGS="-server -Xms256m -Xmx1024m -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -XX:+UnlockExperimentalVMOptions  -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Djava.security.egd=file:/dev/./urandom"
+fi
+
+if [ "${KEY_STORE}" != "" ] ; then
+   if [ "${JAVA_ARGS}" == "" ] ; then
+      export JAVA_ARGS="-Djavax.net.ssl.keyStore=${KEY_STORE}"
+   else
+      export JAVA_ARGS="-Djavax.net.ssl.keyStore=${KEY_STORE} ${JAVA_ARGS}"
+   fi
+fi 
+
+if [ "${KEY_STORE_PASSWORD}" != "" ] ; then
+   if [ "${JAVA_ARGS}" == "" ] ; then
+      export JAVA_ARGS="-Djavax.net.ssl.keyStorePassword=${KEY_STORE_PASSWORD}"
+   else
+      export JAVA_ARGS="-Djavax.net.ssl.keyStorePassword=${KEY_STORE_PASSWORD} ${JAVA_ARGS}"
+   fi
+fi 
+
+if [ "${TRUST_STORE}" != "" ] ; then
+   if [ "${JAVA_ARGS}" == "" ] ; then
+      export JAVA_ARGS="-Djavax.net.ssl.trustStore=${TRUST_STORE}"
+   else
+      export JAVA_ARGS="-Djavax.net.ssl.trustStore=${TRUST_STORE} ${JAVA_ARGS}"
+   fi
+fi 
+
+if [ "${TRUST_STORE_PASSWORD}" != "" ] ; then
+   if [ "${JAVA_ARGS}" == "" ] ; then
+      export JAVA_ARGS="-Djavax.net.ssl.trustStorePassword=${TRUST_STORE_PASSWORD}"
+   else
+      export JAVA_ARGS="-Djavax.net.ssl.trustStorePassword${TRUST_STORE_PASSWORD} ${JAVA_ARGS}"
+   fi
+fi 
+export JAR_FILE=`find ${HOME} -name "*.jar"`
+echo "Running command: java ${JAVA_ARGS} -jar ${JAR_FILE}"
+java ${JAVA_ARGS} -jar ${JAR_FILE}
